social login test login 수정(일부)

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,6 +21,6 @@
             }
         </script>
         <br/><br/>
-        <a th:href="@{/}">메인으로 돌아가기</a>
+        <a th:href="@{home}">메인으로 돌아가기</a>
     </body>
 </html>
