--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>인증을 무사히 완료하였습니다.</h1>
-    <a th:href="@{/}">메인으로 돌아가기</a>
+    <a th:href="@{home}">메인으로 돌아가기</a>
 </body>
 </html>
